<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_height="500dp"
            android:layout_width="match_parent">

            <fragment
                android:id="@+id/map_fragment1"
                android:name="com.example.firebase_authen.fragment.MapsFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <androidx.appcompat.widget.SearchView
                android:id="@+id/idSearchView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:elevation="5dp"
                app:iconifiedByDefault="false"
                app:queryHint="Search Here" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal"
                >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="@string/number_of_volunteer" />

                    <EditText
                        android:id="@+id/numOfVolunteers"
                        android:layout_width="150dp"
                        android:layout_height="44dp"
                        android:ems="10"
                        android:inputType="number"
                        android:text="" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:textColor="@color/black"
                        android:id="@+id/leader_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/leader_id" />

                    <Spinner
                        android:id="@+id/leaderIdSpinner"
                        android:layout_width="150dp"
                        android:layout_height="44dp" />
                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/filter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/search" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center|bottom"
                android:orientation="horizontal"
                >

                <Button
                    android:id="@+id/logout"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_marginEnd="10dp"
                    android:layout_height="wrap_content"
                    android:text="@string/log_out"
                    android:textSize="12sp"
                    android:padding="0dp"
                    tools:ignore="NestedWeights" />

                <Button
                    android:id="@+id/notification"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:textSize="12sp"
                    android:padding="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/notification"
                    tools:ignore="NestedWeights" />

                <Button
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:id="@+id/createSite"
                    android:textSize="12sp"
                    android:padding="0dp"
                    android:layout_marginStart="10dp"
                    android:layout_height="wrap_content"
                    android:text="@string/create_site" />

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>