<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SuperUserActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                >

                <TextView
                    android:id="@+id/lId"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:text="@string/site_id"
                    android:textStyle="bold"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/lContent"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/leader_id"
                    android:textSize="12sp"/>

            </LinearLayout>

            <ListView
                android:id="@+id/list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </ListView>

        </LinearLayout>


        <Button
            android:id="@+id/logout"
            android:layout_marginBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/log_out"
            android:textSize="12sp"
            android:padding="0dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>