<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SiteDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_height="300dp"
            android:layout_width="match_parent">

            <fragment
                android:id="@+id/map_site_detail"
                android:name="com.example.firebase_authen.fragment.MapsFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="MissingConstraints" />

        <androidx.appcompat.widget.SearchView
            android:id="@+id/idSearchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:elevation="5dp"
            app:iconifiedByDefault="false"
            app:queryHint="Search Here" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_gravity="center_horizontal"
            >

            <Button
                android:id="@+id/download"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="12sp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/download"/>

            <Button
                android:id="@+id/closeSite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="12sp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/close_site" />

            <Button
                android:id="@+id/joinSite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="12sp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/join_site" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:layout_marginTop="20dp"
            >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:paddingEnd="10dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Positive cases"/>
                <EditText
                    android:id="@+id/positive_cases"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:paddingStart="10dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="People tested"/>
                <EditText
                    android:id="@+id/people_tested"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                >

                <TextView
                    android:id="@+id/lId"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:text="@string/volunteer_id"
                    android:textStyle="bold"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/lContent"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/volunteer_email"
                    android:textSize="12sp"/>

            </LinearLayout>

            <ListView
                android:id="@+id/list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </ListView>

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>